# harness-seed

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  harness-seed.code-workspace
config/: README.md  config.json
config/samples/: config.anthropic.json  config.gemini.json  config.lmstudio.json  config.ollama.json  config.openai.json
doc/: advance-loop.md  agent-minimum-action-unit.md  context-memory-mapping.md  react-implementation.md  scout-phase.md  wire-protocol.md
doc/architecture/: 00_harness-seedの構造.md  01_計画層.md  02-01_ツールの選択.md  02_実行層.md  README.md
doc/architecture-en/: 00_harness-seed-structure.md  01_planning-layer.md  02-01_tool-selection.md  02_execution-layer.md  README.md
doc/builtin_tools/: README.md  echo.md  grep.md  list_dir.md  read_file.md  run_cmd.md  time.md  web_search.md  write_file.md
doc/ideas/: README.md  context-colormap.md  (+6 more)
monitor/: context_monitor.html
src/: action.rs  advance.rs  brain.rs  brave_search.rs  config.rs  context.rs  context_log.rs  context_map.rs  context_metrics.rs  grep.rs  layer.rs  lib.rs  main.rs  plan.rs  protocol.rs  react.rs  runtime.rs  scout.rs  session.rs  tool.rs  tool_display.rs  turn_observer.rs
tasks/: README.md  generic.json  list_dir.json  web_research.json  write_file_verify.json
tests/: brain_mode_context_test.rs  context_metrics_test.rs  integration_test.rs  list_files_test.rs  llm_connector_test.rs  lmstudio_config_test.rs  ollama_config_test.rs  prompt_blocks_test.rs  self_intro_test.rs  step_driver_test.rs  two_phase_test.rs  wire_protocol_test.rs  write_code_test.rs
(+47 files in other folders)
